# helix-dna

./: Cargo.toml  DESIGN.md  Makefile  PLAN.md
crates/helix-dna/: Cargo.toml
crates/helix-dna-core/: Cargo.toml
crates/helix-dna-core/src/: concept.rs  error.rs  execution.rs  lib.rs  network.rs  node.rs  store.rs
crates/helix-dna-nlp/: Cargo.toml
crates/helix-dna-nlp/src/: error.rs  grammar.pest  lib.rs  parser.rs  resolver.rs  tokenizer.rs
crates/helix-dna-wasm/: Cargo.toml
crates/helix-dna-wasm/src/: codegen.rs  error.rs  instructions.rs  lib.rs  module.rs  wasi.rs
crates/helix-dna/src/: lib.rs
crates/helix-dna/tests/: integration.rs
