[package]
name = "helix-dna-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
