[package]
name = "helix-dna-core"
description = "Core concept network, B-tree storage, and execution engine for helix-dna"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
