[package]
name = "helix-dna-nlp"
description = "NLP parser and resolver for helix-dna concept networks"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
helix-dna-core = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }
