[package]
name = "helix-dna-wasm"
description = "WASM/WASI code generation for helix-dna concept networks"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
helix-dna-core = { workspace = true }
wasm-encoder = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasmparser = { workspace = true }
