[package]
name = "helix-dna"
description = "Concept network thought-to-instruction compiler targeting WASM/WASI"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
helix-dna-core = { workspace = true }
helix-dna-nlp = { workspace = true }
helix-dna-wasm = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasmtime = { workspace = true }
